text wrapping bug fixes and code tidying

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ text {
   fill : #f0f;
 }
 
-.left-container{
+.full-height{
   height:100%;
 }
 
